# py-node-edge

./: .readthedocs.yaml  Makefile  README.md  poc.py  pyproject.toml
.github/workflows/: tests.yml
doc/source/: conf.py  contributing.md  getting-started.md  index.rst  performance.md  proxies.md  roadmap.md
src/node_edge/: __init__.py  _engine.py  _exceptions.py  exceptions.py  runtime.js
tests/: test_await.py  test_call.py  test_env.py  test_eval.py  test_gc.py  test_import.py  test_proxy.py
