[tool.poetry]
name = "node-edge"
version = "0.1.0"
description = "A tool to run Node code from Python"
authors = ["Rémy Sanchez <remy.sanchez@hyperthese.net>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "node_edge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
xdg = "^5.1.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
